# MGS-Plus

./: .env.example  .gitignore  MGSPlus.sln  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
configs/: agents-config.yml  backend-config.yml  data-pipeline-configs.yml  frontend-config.yml  global_config.py  infra-config.yml
data_pipeline/: config.py  embed.py  inject_data.py  load_data.py  seed_medical.py
infra/: .env.example  .gitignore  README.md  docker-compose.yml
infra/docker/services/: BUILD_GUIDE.md
infra/scripts/: README.md  build.sh  dev.sh
src/agents/: README.md  __init__.py  server.py
src/agents/api/: __init__.py  deps.py  documents_app.py  supervisor_app.py  workflow_app.py
src/agents/core/: config.py  internal_api_client.py
src/agents/crews/: __init__.py  main_crew.py
src/agents/tests/: conftest.py  test_a2a.py  test_api_supervisor.py  test_documents_tools.py  test_main_crew.py  test_memory_service.py  test_supervisor_tools.py
src/backend/: Dockerfile  MGSPlus.Api.csproj  Program.cs  README.md  YamlConfig.cs
src/backend/Controllers/: AdminController.cs  AppointmentsController.cs  AuthController.cs  BlogController.cs  ChatbotController.cs  DirectChatController.cs  MedicalRecordsController.cs  NewsController.cs  PrescriptionController.cs  UsersController.cs
src/backend/DTOs/: AdminDtos.cs  AppointmentDtos.cs  AuthDtos.cs  BlogDtos.cs  ChatDtos.cs
src/backend/Data/: ApplicationDbContext.cs
src/backend/Hubs/: DirectChatHub.cs
src/backend/Middleware/: GlobalExceptionHandler.cs
src/backend/Migrations/: 20260415172753_AddDoctorApplicationAndAdminSeed.Designer.cs  20260415172753_AddDoctorApplicationAndAdminSeed.cs  20260416023615_AddAppointmentDoctorActionFields.Designer.cs  20260416023615_AddAppointmentDoctorActionFields.cs  20260416023918_AddDirectChatAndPrescription.Designer.cs  (+6 more)
src/frontend/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
(+117 files in other folders)
